--- a/public/css/vars.css
+++ b/public/css/vars.css
@@ -15,11 +15,13 @@
   font-style: normal;
 }
 
-body {
-  font-family: "Franklin, sans-serif";
-}
-
 * {
+  font-family: "Franklin, sans-serif";
   margin: 0;
   padding: 0;
+}
+
+body {
+  height: 100vh;
+  width: 100vh;
 }
