--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,40 @@
-@import url("../vars.css");
+@import url("/css/vars.css");
 
+.products {
+  background-color: var(--content-color);
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border-radius: 30px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
 
+.products h2 {
+  width: 100%;
+  font-size: 30px;
+  text-align: center;
+  margin: 10px 0px;
+  color: var(--secondary-color);
+}
+
+.product {
+  width: 20%;
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.productImg {
+  width: 170px;
+  height: 170px;
+  border-radius: 8px;
+}
+
+.product span {
+  width: 100%;
+  height: 20px;
+  text-align: center;
+}
