--- a/public/css/layout-style.css
+++ b/public/css/layout-style.css
@@ -1,7 +1,69 @@
-@import url("../vars.css");
+@import url("/css/vars.css");
 
-header {
-  height: 15%;
-  width: 100%;
+html body {
+  padding: 0;
+  margin: 0;
   background-color: var(--background-color);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+header {
+  height: 12%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+nav {
+  background-color: var(--content-color);
+  height: 100%;
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 20px;
+  margin: 30px 0px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+nav img {
+  height: 220px;
+  width: 185px;
+  margin-top: 5px;
+}
+
+nav input,
+select {
+  height: 50px;
+  background-color: var(--content-color);
+  color: var(--border);
+  border: 1px solid var(--border);
+  border-radius: 30px;
+  text-align: center;
+}
+
+nav input {
+  width: 50%;
+}
+
+nav select {
+  width: 12%;
+}
+
+.main-container {
+  width: 100%;
+  height: 60%;
+}
+
+.main-body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+footer {
+  margin-top: 20px;
 }
