--- a/public/css/vars.css
+++ b/public/css/vars.css
@@ -6,22 +6,18 @@
   --card-color: #d9d9d9;
   --button-background: #e74c3c;
   --button-text: #fff;
+  --border: #8f8f8f;
 }
 
 @font-face {
   font-family: "Franklin";
-  src: url(../fonts/Libre_Franklin/LibreFranklin-Italic-VariableFont_wght.ttf);
+  src: url("/fonts/Libre_Franklin/LibreFranklin-Italic-VariableFont_wght.ttf");
   font-weight: normal;
   font-style: normal;
 }
 
 * {
-  font-family: "Franklin, sans-serif";
+  font-family: "Franklin", sans-serif;
   margin: 0;
   padding: 0;
-}
-
-body {
-  height: 100vh;
-  width: 100vh;
 }
