--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,7 +8,7 @@
   flex-wrap: wrap;
   justify-content: center;
   border-radius: 30px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .products h2 {
@@ -25,16 +25,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .productImg {
   width: 170px;
   height: 170px;
   border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  margin-bottom: 5px;
 }
 
 .product span {
   width: 100%;
   height: 20px;
   text-align: center;
+  color: var(--secondary-color);
+}
+
+.products .page {
+  color: white;
 }
