--- a/public/css/layout-style.css
+++ b/public/css/layout-style.css
@@ -1,6 +1,10 @@
 @import url("/css/vars.css");
 
-html body {
+html {
+  width: 100vh;
+  width: 100vw;
+}
+body {
   padding: 0;
   margin: 0;
   background-color: var(--background-color);
@@ -9,8 +13,9 @@ html body {
   display: flex;
   flex-direction: column;
 }
+
 header {
-  height: 12%;
+  height: 15%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -24,14 +29,13 @@ nav {
   justify-content: space-around;
   align-items: center;
   border-radius: 20px;
-  margin: 30px 0px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  margin: 20px 0px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 nav img {
   height: 220px;
-  width: 185px;
-  margin-top: 5px;
+  width: 220px;
 }
 
 nav input,
